<resources>
    <string name="app_name">Namaste</string>
    <string name="activity_lable">Namaste (NSMC)</string>
    <string name="enter_nsmc_term">Enter term or code/தமிழ் சொற்களை உள்ளிடவும்</string>
    <string name="Home_Information">

    </string>
    <string name="todo2">TODO</string>
    <string name="autocompletetextview">AutoCompleteTextView</string>
    <string name="autocompletetextSearch">AutoCompleteTextView</string>
    <string name="title_activity_tabbed_search">TabbedSearch</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="search_by_term">Search By\nTerm</string>
    <string name="cdsm_search">CDSM\nTerm</string>
    <string name="search_by_code">Search By\nCode</string>
    <string name="enter_namc_code">Enter NAMC Code</string>
    <string name="search_by_tamil">தமிழ் சொற்களை உள்ளிடவும்</string>
    <string name="search_by_english">Search by English</string>
    <string name="search_by_nsmc">Search by NSMC Code</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">ccrschennai@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">About SCRI</string>
    <string name="menu_slideshow">About CCRS</string>
    <string name="menu_tools">NSMC</string>
    <string name="menu_share">Features</string>
    <string name="menu_send">Disclaimer</string>
    <string name="logo">logo</string>
    <string name="todo">TODO</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="activity_tabbed_search">Search</string>
    <string name="activity_view_result">Record Information</string>
    <string name="menu_team">Team</string>
    <string name="menu_designed">Developed By</string>
    <string name="image">Image</string>
    <string name="developed_by">DevelopedBy</string>


</resources>
