<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.namaste.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_about_scri"
        android:name="com.namaste.ui.scri.ScriFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_scri" />

    <fragment
        android:id="@+id/nav_about_ccrs"
        android:name="com.namaste.ui.ccrs.CcrsFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_ccrs" />

    <fragment
        android:id="@+id/nav_nsmc_browse"
        android:name="com.namaste.ui.nsmc.NsmcFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_nsmc" />

    <fragment
        android:id="@+id/nav_features"
        android:name="com.namaste.ui.features.FeaturesFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_features" />

    <fragment
        android:id="@+id/nav_disclaimer"
        android:name="com.namaste.ui.disclaimer.DisclaimerFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_disclaimer" />

    <fragment
        android:id="@+id/nav_developedby"
        android:name="com.namaste.ui.developedby.DevelopedbyFragment"
        android:label="@string/menu_designed"
        tools:layout="@layout/fragment_developedby" />

    <fragment
        android:id="@+id/nav_team"
        android:name="com.namaste.ui.team.TeamFragment"
        android:label="@string/menu_team"
        tools:layout="@layout/fragment_team" />
</navigation>